# rapl-rust-test

./: Cargo.toml  README.md  rapl-interface.sln  repeat_bench.sh  runBench.sh
.github/workflows/: rust.yml
benchRunners/: base64.sh  bench_func.sh  count_input_params.sh  empty.sh  fib.sh  mergeSort.sh  nbody.sh  quicksort.sh  sleep.sh
benchmarks/FibSequence/: bench.js  bench.py
benchmarks/FibSequence/benchC#/: Program.cs
benchmarks/FibSequence/c/: bench.c
benchmarks/FibSequence/cpp/: bench.cpp
benchmarks/FibSequence/fibjava/: Bench.java
benchmarks/MergeSort/: bench.js  bench.md  bench.py
benchmarks/MergeSort/benchC#/: Program.cs
benchmarks/MergeSort/c/: bench.c
benchmarks/MergeSort/cpp/: bench.cpp
benchmarks/MergeSort/fibjava/: Bench.java
benchmarks/MergeSort/java/: Bench.java
benchmarks/N-Body/: bench.js  bench.py
benchmarks/N-Body/benchC++/: better_than_rust.cpp
benchmarks/base64/c/: bench.c
benchmarks/base64/cpp/: bench.cpp
benchmarks/base64/csharp/: Program.cs
benchmarks/base64/java/: Bench.java
benchmarks/base64/javascript/: bench.js
benchmarks/empty/: bench.py
benchmarks/fibjava/: Bench.java  Test.java
benchmarks/fibonacci sequence/: bench.js  bench.md  bench.py
rapl-bin/: Cargo.toml
rapl-bin/src/: main.rs
rapl-lib/: Cargo.toml
rapl-lib/src/: ffi.rs  rapl.rs
rapl-rust-lib/: Cargo.toml
rapl-rust-lib/src/: ffi.rs
rapl-rust-lib/src/rapl/: linux.rs  windows.rs
rapl-windows/: Cargo.toml
rapl-windows/src/: main.rs
utils/: append_to_latest_csv.sh  raspberry_logger.sh  send_results_raspberry.sh
(+44 files in other folders)
